# ParquetRsForDotnet

./: .gitignore  AGENTS.md  LICENSE  ParquetRsForDotnet.slnx  ParquetRsForDotnet.snk  README.md  es-metadata.yml  nuget.config  owners.txt
.config/: tsaoptions.json
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release-dry-run.yml
api/: public-api.md  semantic-index.json
benchmarks/: ArrowExportBenchmarks.cs  BatchWriterBenchmarks.cs  ParquetReaderBenchmarks.cs  ParquetRsForDotnet.Benchmarks.csproj  PrebuiltArrowBatchWriterBenchmarks.cs  Program.cs  ReadCategoryBenchmarks.cs  WriteCategoryBenchmarks.cs
docs/: agentic-coding-guide.md  github-migration-plan.md  read-write-architecture.md  write-architecture.md
docs/adr/: 0001-arrow-native-public-api.md  0002-rust-parquet-native-layer.md  0003-explicit-schema-batch-writer.md  0004-row-group-column-reader.md  0005-netstandard20-compatibility.md  0006-native-runtime-assets.md
docs/ai/: anti_patterns.md  bootstrap.md  capabilities.md  common_patterns.md  limitations.md  overview.md
docs/architecture/: native-interop.md  read-pipeline.md  target-frameworks.md  type-system.md  write-pipeline.md
docs/how-to/: configure-write-options.md  debug-native-loading.md  handle-errors.md  read-arrow-columns.md  (+5 more)
examples/: README.md
native/: Cargo.toml
native/src/: lib.rs
src/: AssemblyInfo.cs  ParquetRsForDotnet.csproj
tests/: NetStandardCompatibilityTests.cs  ParquetReaderTests.cs  ParquetRsForDotnet.Tests.csproj  ParquetWriterTests.cs
(+40 files in other folders)
