[package]
name = "parquet_rs_for_dotnet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "58.0.0", features = ["ffi"] }
arrow-array = { version = "58.0.0" }
arrow-schema = { version = "58.0.0", features = ["ffi"] }
bytes = "1.11.0"
parquet = { version = "58.0.0", features = ["arrow", "zstd", "snap", "flate2", "brotli", "lz4"] }

[dev-dependencies]
tempfile = "3.13.0"
